# up-client

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  todo.md  vcpkg.json
app/: main.cpp
config/: config.toml.example
include/config/: Config.h
include/dao/: UpDao.h
include/model/: CategorySummary.h  Transaction.h
include/service/: StartMenu.h  UpService.h
src/: UpDao.cpp  menu.h
src/config/: Config.cpp  Config.h
src/controller/: DataController.cc  DataController.h
src/dao/: UpDao.cpp  UpDao.h
src/model/: Account.h  Amount.h  Snapshot.h  Stats.h  Tags.h  Transaction.h
src/service/: DataManager.cpp  DataManager.h  DateHelper.h  FileWriter.cpp  FileWriter.h  Repository.h  UpService.cpp  UpService.h
